version 2.7 - Sacred Grove ()

	+ Fixed bug #12. Missing translation key
	+ Adapted some new PHP code formatting
	+ Fixed some translations
	+ Updated bulma css
	+ Added random link page

version 2.6 - Hypostyle (2021-03-21)

	+ Fixed sql problems with Maria DB. Any_value is not supported there
	+ Fixed some query and data loading brain fucks..
	+ Fixed #10. URL is now considered when building search information.
		Update search index from stats view to update all the exiting information
	+ Updated third party information in readme
	+ Fixed xml import xsd
	+ Added translation support. More information in translation.txt

version 2.5.2 - Darkmere (2020-09-12)

    + Fixed bug #8 It is possible to add empty tags and categories.
        Special chars check done on server side. JS has problems with unicode.
    + Fixed bug #7 Edit categories/tags. Rename and move
    + Fixed feature #3 Reduce whitespace in frontend

version 2.5.1 - Caves of Circe (2020-03-22)

    + Bugfix release

version 2.5 - Winnowing Hall (2020-03-21)

    + Added a thumbnail by talking to Google page speed API
      Planned was a full page snapshot, but only got the thumbnail.
      Needs some more work with headless chrome.
    + Instead you can now decide to make a full page screenshot
      using wkhtmltoimage. See documentation about it.
    + Improved documentation

version 2.4 - Seven Portals (2020-02-16)

    + Now including update instructions
    + DB export only insipid tables and not the whole DB itself.
    + Simple xml export and import
    + #2 Protection if the email-import.php file if it needs to be
        in a web accessible folder
    + Fixed the search for words. See update instructions how to correct your data
    + Removed JS and replaced it with plain old working JS
    + Dropped IE support. Edge still working.

version 2.3 - Guardian of Steel (2019-12-30)

    + Improved documentation
    + Delete single local storage of a link