@@ -1,6 +1,10 @@
 If you are updating from a previous version make sure every update info from
 the version your are updating from is done.
 
+## version 2.7 Sacred Grove
++ New syntax in config file. Switched from define() to const syntax.
+  Use config.default.php as a template to update your config.
+
 ## version 2.6 - Hypostyle
 
 + Update config file with the new language setting. See config.default and
